[tool.poetry]
name = "nameko-reloader"
version = "0.1.0"
description = "Add hot reload feature for nameko services"
authors = ["Renan Santana <renan.santana@instruct.com.br>"]

[tool.poetry.dependencies]
python = "^3.6"
nameko = "^2.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
